--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "scripts": {
-        "test": "vendor/bin/phpunit tests --bootstrap vendor/autoload.php",
+        "test": "vendor/bin/phpunit",
         "test:watch": "vendor/bin/phpunit-watcher watch tests/*",
         "format": "vendor/bin/php-cs-fixer fix src",
         "lint": "vendor/bin/phpmd src text codesize,cleancode,design,naming,controversial,unusedcode"
