:bug: Middleware handle has not same return of Handler

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,12 @@ steps:
 - script: composer lint
   displayName: 'composer lint'
 
+- script: php examples/command-test.php
+  displayName: 'example command test'
+
+- script: php examples/query-test.php
+  displayName: 'example query test'
+
 - script: composer test
   displayName: 'composer test'
 
