fixup! fixup! :bug: Middleware handle has not same return of Handler

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         },
         {
             "name": "Sylvain Pontoreau",
-            "email": "spontoreau@wynd.eu"
+            "email": "pontoreau.sylvain@gmail.com"
         },
         {
             "name": "Jean Pasqualini",
